Tests updated with allocations, junit5 additional migration